<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DongFrameDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="net_not_available">网络未连接，请确认手机已联网</string>
    <string name="net_connect_right">请确认手机网络连接正常</string>
    <string name="http_failure">请求失败，请重试</string>
    <string name="again_click_exit">再次点击退出</string>
    <string name="dialog_quit_msg">确认退出客户端？</string>
    <string name="dialog_sure">确认</string>
    <string name="dialog_title">温馨提示：</string>
    <string name="dialog_message">您还没有开启GPS,请开启GPS</string>
    <string name="dialog_open">开启</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_upgrade">升级</string>
    <string name="dialog_progress">请稍等...</string>

    <!-- 登录注册 -->
    <string name="login_user_name">用户名：</string>
    <string name="login_user_pass">密    码：</string>
    <string name="login_remember_pass">记住密码</string>
    <string name="login_forget_pass">忘记密码</string>
    <string name="login_btn">登录</string>
    <string name="login_open_GPS">请打开GPS</string>
    <string name="toast_user_empty">用户名为空</string>
    <string name="toast_password_empty">密码为空</string>
    <string name="toast_no_open_gps">请打开GPS</string>

    <!-- 关于我们 -->
    <string name="aswescore_no_apply">手机未检测到应用市场</string>

</resources>